Project

General

Profile

Actions

Bug #6689

closed

r36284: symbol referenceng error: atomic_swap_long in Solaris

Bug #6689: r36284: symbol referenceng error: atomic_swap_long in Solaris

Added by ngoto (Naohisa Goto) about 14 years ago. Updated about 14 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
-
Backport:
[ruby-dev:45904]

Description

r36284以降、sparc上の Solaris 10 + Oracle Solaris Studio 12 にて、
atomic_swap_long が見つからない symbol referenceng error になり、
minirubyが出来ません。以下のパッチで治りました。

ところで、r36284で追加された ATOMIC_SIZE_**** というマクロ群は、
gc.c に直書きではなく、以前からatomic操作関連のマクロを置いている
atomic.h に追加して、それを#includeする形にしたほうが、
#if の条件のメンテナンスが楽になるため大変ありがたいのですが、
可能でしょうか?

Index: gc.c

--- gc.c (revision 36289)
+++ gc.c (working copy)
@@ -79,7 +79,7 @@

define ATOMIC_SIZE_SUB(var, val) atomic_add_long(&(var), -(val))

define ATOMIC_SIZE_INC(var) atomic_inc_ulong(&(var))

define ATOMIC_SIZE_DEC(var) atomic_dec_ulong(&(var))

-# define ATOMIC_SIZE_EXCHANGE(var, val) atomic_swap_long(&(var), (val))
+# define ATOMIC_SIZE_EXCHANGE(var, val) atomic_swap_ulong(&(var), (val))

else

define ATOMIC_SIZE_ADD(var, val) atomic_add_int(&(var), (val))

define ATOMIC_SIZE_SUB(var, val) atomic_add_int(&(var), -(val))

Updated by ngoto (Naohisa Goto) about 14 years ago Actions #1

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r36290.
Naohisa, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


Updated by ko1 (Koichi Sasada) about 14 years ago Actions #2 [ruby-dev:45905]

そもそも,gc.c の変更は本当に必要なんでしょうか.

(2012/07/03 23:17), ngoto (Naohisa Goto) wrote:

Issue #6689 has been reported by ngoto (Naohisa Goto).


Bug #6689: r36284: symbol referenceng error: atomic_swap_long in Solaris
https://bugs.ruby-lang.org/issues/6689

Author: ngoto (Naohisa Goto)
Status: Open
Priority: Normal
Assignee:
Category:
Target version:
ruby -v: -

r36284以降、sparc上の Solaris 10 + Oracle Solaris Studio 12 にて、
atomic_swap_long が見つからない symbol referenceng error になり、
minirubyが出来ません。以下のパッチで治りました。

ところで、r36284で追加された ATOMIC_SIZE_**** というマクロ群は、
gc.c に直書きではなく、以前からatomic操作関連のマクロを置いている
atomic.h に追加して、それを#includeする形にしたほうが、
#if の条件のメンテナンスが楽になるため大変ありがたいのですが、
可能でしょうか?

Index: gc.c

--- gc.c (revision 36289)
+++ gc.c (working copy)
@@ -79,7 +79,7 @@

define ATOMIC_SIZE_SUB(var, val) atomic_add_long(&(var), -(val))

define ATOMIC_SIZE_INC(var) atomic_inc_ulong(&(var))

define ATOMIC_SIZE_DEC(var) atomic_dec_ulong(&(var))

-# define ATOMIC_SIZE_EXCHANGE(var, val) atomic_swap_long(&(var), (val))
+# define ATOMIC_SIZE_EXCHANGE(var, val) atomic_swap_ulong(&(var), (val))

else

define ATOMIC_SIZE_ADD(var, val) atomic_add_int(&(var), (val))

define ATOMIC_SIZE_SUB(var, val) atomic_add_int(&(var), -(val))

--
// SASADA Koichi at atdot dot net

Updated by nobu (Nobuyoshi Nakada) about 14 years ago Actions #3 [ruby-dev:45909]

なかだです。

At Tue, 3 Jul 2012 23:17:20 +0900,
ngoto (Naohisa Goto) wrote in [ruby-dev:45904]:

ところで、r36284で追加された ATOMIC_SIZE_**** というマクロ群は、
gc.c に直書きではなく、以前からatomic操作関連のマクロを置いている
atomic.h に追加して、それを#includeする形にしたほうが、
#if の条件のメンテナンスが楽になるため大変ありがたいのですが、
可能でしょうか?

動かないだろうことがわかっていたWin64が修正されたので、atomic.h
で考慮されているプラットフォームは対応されたことになりますから、
もう移動しても構わないんじゃないでしょうか。

--
--- 僕の前にBugはない。
--- 僕の後ろにBugはできる。
中田 伸悦

Actions

Also available in: PDF Atom