* gc.c (ATOMIC_SIZE_EXCHANGE): fix function name on Solaris [Bug #6689]   [ruby-dev:45904]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@36290 b2dd03c8-39d4-4d8f-98ff-823fe69b080e