gc.c
@@ -79,7 +79,7 @@
 # define ATOMIC_SIZE_SUB(var, val) atomic_add_long(&(var), -(val))
 # define ATOMIC_SIZE_INC(var) atomic_inc_ulong(&(var))
 # define ATOMIC_SIZE_DEC(var) atomic_dec_ulong(&(var))
-# define ATOMIC_SIZE_EXCHANGE(var, val) atomic_swap_long(&(var), (val))
+# define ATOMIC_SIZE_EXCHANGE(var, val) atomic_swap_ulong(&(var), (val))
 # else
 # define ATOMIC_SIZE_ADD(var, val) atomic_add_int(&(var), (val))
 # define ATOMIC_SIZE_SUB(var, val) atomic_add_int(&(var), -(val))
